--- a/sass/style.scss
+++ b/sass/style.scss
@@ -581,6 +581,7 @@ body {
 	h3{
 		font-size: 18px;
 		text-transform: uppercase;
+		text-align: justify;
 		letter-spacing: 5px;
 		font-weight: 500;
 	}
