--- a/css/style.css
+++ b/css/style.css
@@ -435,13 +435,14 @@ body.offcanvas {
 
 .about-desc h3 {
   font-size: 18px;
+  text-align: justify;
   text-transform: uppercase;
   letter-spacing: 5px;
   font-weight: 500; }
 
 .hire {
   padding: 2em;
-  background: #f9bf3f; }
+  background: #bbe1ff; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
